--- a/src/app/events-list/events-list.component.css
+++ b/src/app/events-list/events-list.component.css
@@ -1,68 +1,125 @@
-.table-link {
-    color: darkblue;
+
+table {
+    width: 100%;
 }
 
-mat-cell {
+cell {
     white-space: pre;
 }
 
 img {
     width: 20px;
     height: 20px;
+    align-content: center;
 }
 
-.mat-column-name {
-    flex: 0 0 15%;
-    font-family: monospace;
-    font-size: smaller;
-    line-height: 1.4;
+
+@media (min-width: 769px) {
+
+    th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
+        padding-left: 0;
+    }
+
+    th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type {
+        padding-right: 0;
+    }
+
+    td.mat-column-image {
+        width: 7%;
+        font-family: monospace;
+        line-height: 1.4;
+        vertical-align: top;
+        padding-top: 0.4rem;
+        font-size: small;
+        padding-right: 6px;
+        padding-left: 6px;
+    }
+
+    td.mat-column-name {
+        width: 15%;
+        font-family: monospace;
+        line-height: 1.4;
+        vertical-align: top;
+        padding-top: 0.4rem;
+        font-size: small;
+    }
+
+    td.mat-column-block {
+        width: 8%;
+        font-family: monospace;
+        line-height: 1.4;
+        vertical-align: top;
+        padding-top: 0.4rem;
+        font-size: small;
+        padding-right: 6px;
+        padding-left: 6px;
+    }
+
+    td.mat-column-trxHash {
+        width: 26%;
+        font-family: monospace;
+        line-height: 1.4;
+        vertical-align: top;
+        padding-top: 0.4rem;
+        font-size: small;
+        padding-right: 6px;
+        padding-left: 6px;
+    }
+
+    td.mat-column-value {
+        width: 45%;
+        font-family: monospace;
+        line-height: 1.4;
+        vertical-align: top;
+        padding-top: 0.4rem;
+        white-space: pre;
+        font-size: small;
+        padding-right: 6px;
+        padding-left: 6px;
+    }
+
+    td.mat-form-field {
+        margin-top: 1.0rem;
+        margin-left: 1.5rem;
+    }
+
+    td.mat-cell, td.mat-header-cell, td.mat-footer-cell {
+        min-height: 0;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    td.mat-form-field {
+        margin-top: 0;
+        margin-left: 0;
+    }
 }
 
-.mat-column-block {
-    flex: 0 0 10%;
-    font-family: monospace;
-    font-size: smaller;
-    line-height: 1.4;
+
+@media (min-width: 1025px) {
+
+    td.mat-column-image {
+        font-size: medium;
+    }
+
+    td.mat-column-name {
+        font-size: medium;
+    }
+
+    td.mat-column-block {
+        font-size: medium;
+    }
+
+    td.mat-column-trxHash {
+        font-size: medium;
+    }
+
+    td.mat-column-value {
+        font-size: medium;
+    }
+
 }
 
-.mat-column-trxHash {
-    flex: 0 0 22%;
-    font-family: monospace;
-    font-size: smaller;
-    line-height: 1.4;
-}
-
-.mat-column-key {
-    flex: 0 0 7%;
-    font-family: monospace;
-    font-size: smaller;
-    line-height: 1.4;
-}
-
-.mat-column-value {
-    flex: 0 0 45%;
-    font-family: monospace;
-    font-size: smaller;
-    line-height: 1.4;
-}
-
-mat-form-field {
-    margin-top: 1.0rem;
-    margin-left: 1.5rem;
-}
-
-mat-row, mat-header-row, mat-footer-row {
-    align-items: center;
-    align-items: flex-start;
-}
-
-mat-cell, mat-header-cell, mat-footer-cell {
-    min-height: 0;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-mat-form-field {
-    margin-top: 0;
-    margin-left: 0;
+.table-link {
+    color: darkblue;
 }
