--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<mat-toolbar class="header" color="primary">
-    <span>Ethereum Event Scan</span>
+<mat-toolbar class="header" color="primary" >
+    <mat-toolbar-row >
+        <span class="title">Ethereum-Event-Scan</span>
+        <span class="title-sub">An open source Ethereum event explorer. Available on
+            <a href="https://github.com/MarkusSprunck/ethereum-event-scan" target="_blank">GitHub</a>
+        </span>
+    </mat-toolbar-row>
 </mat-toolbar>
-
-<!-- Right side --><a href="https://github.com/MarkusSprunck/ethereum-event-scan" target="_blank">
-    <img alt="Fork me on GitHub" src="../assets/github.png" style="position: absolute; top: 0; right: 0; border: 0; width: 8rem">
-</a>
 
 <!-- Main content -->
 <div class="row">
@@ -21,5 +22,7 @@
         <app-events-list></app-events-list>
     </div>
 </div>
+
+
 
 
