--- a/src/app/events-list/events-list.component.html
+++ b/src/app/events-list/events-list.component.html
@@ -1,3 +1,6 @@
+
+<form [formGroup]="formSearch">
+
 <!--suppress TypeScriptUnresolvedVariable -->
 <mat-accordion>
 
@@ -12,13 +15,16 @@
         <div class="search-div">
             <mat-form-field color='primary' style="width: 100%;">
                 <label>
-                    <input (keyup)="applyFilter()" [(ngModel)]="searchKey" autocomplete="off" matInput placeholder="Filter">
+                    <input (keyup)="updateSearchValue()"
+                           [value]="searchKey" autocomplete="off"
+                           formControlName="searchKey"
+                           id="searchKey"
+                           matInput
+                           placeholder="Search">
                 </label>
-                <button (click)="onSearchClear()" *ngIf="searchKey" aria-label="Clear" mat-button mat-icon-button matSuffix>
-                    <mat-icon>x</mat-icon>
-                </button>
             </mat-form-field>
         </div>
+
 
         <table [dataSource]="listData" mat-table matSort matTableResponsive>
 
@@ -81,3 +87,5 @@
     </mat-expansion-panel>
 
 </mat-accordion>
+
+</form>
