UI improvements (mobile fonts)

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,7 +10,7 @@
     margin-left: auto;
     margin-right: 0;
     font-weight: lighter;
-    font-size: medium;
+    font-size: small;
 }
 
 div {
