--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -1,9 +1,11 @@
 input.mat-input-element {
-    font-family: monospace;
+    font-family:  Consolas, Menlo, Monaco, monospace;
+    font-weight: lighter;
     color: darkblue;
 }
 
 #abi {
-    font-family: monospace;
+    font-family:  Consolas, Menlo, Monaco, monospace;
+    font-weight: lighter;
     color: darkblue;
 }
