UI improvements (cleanup code -> noImplicitAny, strictNullChecks)

--- a/src/app/details/info-modal.component.css
+++ b/src/app/details/info-modal.component.css
@@ -3,7 +3,8 @@ mat-dialog-content {
 }
 
 div {
-    font-family:  Consolas, Menlo, Monaco, monospace;
+    font-family: Consolas, Menlo, Monaco, monospace;
     font-weight: lighter;
+    font-size: x-small;
     line-height: 1.4;
 }
