--- a/src/app/events-list/events-list.component.html
+++ b/src/app/events-list/events-list.component.html
@@ -1,91 +1,85 @@
-
 <form [formGroup]="formSearch">
 
-<!--suppress TypeScriptUnresolvedVariable -->
-<mat-accordion>
+    <!--suppress TypeScriptUnresolvedVariable -->
+    <mat-accordion>
 
-    <mat-expansion-panel [expanded]="panelOpenState">
+        <mat-expansion-panel [expanded]="panelOpenState">
 
-        <mat-expansion-panel-header>
-            <mat-panel-title><span [innerText]="panelMessage()"></span></mat-panel-title>
-            <mat-panel-description></mat-panel-description>
-        </mat-expansion-panel-header>
-
-
-        <div class="search-div">
-            <mat-form-field color='primary' style="width: 100%;">
-                <label>
-                    <input (keyup)="updateSearchValue()"
-                           [value]="searchKey" autocomplete="off"
-                           formControlName="searchKey"
-                           id="searchKey"
-                           matInput
-                           placeholder="Search">
-                </label>
-            </mat-form-field>
-        </div>
+            <mat-expansion-panel-header>
+                <mat-panel-title><span [innerText]="panelMessage()"></span></mat-panel-title>
+                <mat-panel-description></mat-panel-description>
+            </mat-expansion-panel-header>
 
 
-        <table [dataSource]="listData" mat-table matSort matTableResponsive>
+            <div class="search-div">
+                <mat-form-field color='primary' style="width: 100%;">
+                    <label>
+                        <input (keyup)="updateSearchValue()" [value]="searchKey" autocomplete="off" formControlName="searchKey" id="searchKey" matInput placeholder="Search">
+                    </label>
+                </mat-form-field>
+            </div>
 
 
-            <ng-container matColumnDef="image">
-                <th *matHeaderCellDef mat-header-cell></th>
-                <td *matCellDef="let element" mat-cell>
-                    <div><img [src]="element.image" alt=""/></div>
-                </td>
-            </ng-container>
+            <table [dataSource]="listData" mat-table matSort matTableResponsive>
 
 
-            <ng-container matColumnDef="name">
-                <th *matHeaderCellDef mat-header-cell mat-sort-header>Name</th>
-                <td *matCellDef="let element" mat-cell>
-                    <div innerHTML="{{ element.name | highlight : searchKey}}"></div>
-                </td>
-            </ng-container>
+                <ng-container matColumnDef="image">
+                    <th *matHeaderCellDef mat-header-cell></th>
+                    <td *matCellDef="let element" mat-cell>
+                        <div><img [src]="element.image" alt=""/></div>
+                    </td>
+                </ng-container>
 
-            <ng-container matColumnDef="block">
-                <th *matHeaderCellDef mat-header-cell mat-sort-header>Block</th>
-                <td *matCellDef="let element" mat-cell>
-                    <a (click)="openDetailsDialog($event, element.block, '')" class="table-link" href="" rel="nofollow">
-                        <div innerHTML="{{ element.block | highlight : searchKey}}"></div>
-                    </a>
-                </td>
-            </ng-container>
 
-            <ng-container matColumnDef="trxHash">
-                <th *matHeaderCellDef mat-header-cell mat-sort-header>Trx</th>
-                <td *matCellDef="let element" mat-cell>
-                    <a (click)="openDetailsDialog($event, '', element.trxHash)" class="table-link" href="" rel="nofollow">
-                        <div *ngIf="!(screenWidth > 375 && screenWidth < 769 || screenWidth > 1300)" innerHTML="{{ element.trxHashShort | highlight : searchKey}}"></div>
-                        <div *ngIf="screenWidth > 375 && screenWidth < 769 || screenWidth > 1300" innerHTML="{{ element.trxHash | highlight : searchKey}}"></div>
-                    </a>
-                </td>
-            </ng-container>
+                <ng-container matColumnDef="name">
+                    <th *matHeaderCellDef mat-header-cell mat-sort-header>Name</th>
+                    <td *matCellDef="let element" mat-cell>
+                        <div innerHTML="{{ element.name | highlight : searchKey}}"></div>
+                    </td>
+                </ng-container>
 
-            <ng-container matColumnDef="key">
-                <th *matHeaderCellDef mat-header-cell>Key</th>
-                <td *matCellDef="let element" mat-cell>
-                    <div innerHTML="{{ element.key | highlight : searchKey}}"></div>
-                </td>
-            </ng-container>
+                <ng-container matColumnDef="block">
+                    <th *matHeaderCellDef mat-header-cell mat-sort-header>Block</th>
+                    <td *matCellDef="let element" mat-cell>
+                        <a (click)="openDetailsDialog($event, element.block, '')" class="table-link" href="" rel="nofollow">
+                            <div innerHTML="{{ element.block | highlight : searchKey}}"></div>
+                        </a>
+                    </td>
+                </ng-container>
 
-            <ng-container matColumnDef="value">
-                <th *matHeaderCellDef mat-header-cell>Value</th>
-                <td *matCellDef="let element" mat-cell>
-                    <div innerHTML="{{ element.value | highlight : searchKey}}"></div>
-                </td>
-            </ng-container>
+                <ng-container matColumnDef="trxHash">
+                    <th *matHeaderCellDef mat-header-cell mat-sort-header>Trx</th>
+                    <td *matCellDef="let element" mat-cell>
+                        <a (click)="openDetailsDialog($event, '', element.trxHash)" class="table-link" href="" rel="nofollow">
+                            <div *ngIf="!(screenWidth > 375 && screenWidth < 769 || screenWidth > 1300)" innerHTML="{{ element.trxHashShort | highlight : searchKey}}"></div>
+                            <div *ngIf="screenWidth > 375 && screenWidth < 769 || screenWidth > 1300" innerHTML="{{ element.trxHash | highlight : searchKey}}"></div>
+                        </a>
+                    </td>
+                </ng-container>
 
-            <tr *matHeaderRowDef="displayedColumns;" mat-header-row></tr>
-            <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
+                <ng-container matColumnDef="key">
+                    <th *matHeaderCellDef mat-header-cell>Key</th>
+                    <td *matCellDef="let element" mat-cell>
+                        <div innerHTML="{{ element.key | highlight : searchKey}}"></div>
+                    </td>
+                </ng-container>
 
-        </table>
+                <ng-container matColumnDef="value">
+                    <th *matHeaderCellDef mat-header-cell>Value</th>
+                    <td *matCellDef="let element" mat-cell>
+                        <div innerHTML="{{ element.value | highlight : searchKey}}"></div>
+                    </td>
+                </ng-container>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 50, 100, 500]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+                <tr *matHeaderRowDef="displayedColumns;" mat-header-row></tr>
+                <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
 
-    </mat-expansion-panel>
+            </table>
 
-</mat-accordion>
+            <mat-paginator [pageSizeOptions]="[5, 10, 50, 100, 500]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+
+        </mat-expansion-panel>
+
+    </mat-accordion>
 
 </form>
