UI improvements (mobile view)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header" color="primary">
     <mat-toolbar-row>
         <span class="title">Ethereum-Event-Scan</span>
-        <span class="title-sub">An open source Ethereum event explorer. Available on
+        <span class="title-sub">Available on
             <a href="https://github.com/MarkusSprunck/ethereum-event-scan" target="_blank">GitHub</a>
         </span>
     </mat-toolbar-row>
