--- a/src/app/events-list/events-list.component.css
+++ b/src/app/events-list/events-list.component.css
@@ -4,7 +4,7 @@ table {
 }
 
 cell {
-    white-space: pre;
+    white-space: nowrap;
 }
 
 img {
@@ -68,7 +68,6 @@ img {
         line-height: 1.4;
         vertical-align: top;
         padding-top: 0.4rem;
-        white-space: pre;
         padding-right: 6px;
         padding-left: 6px;
     }
