--- a/src/app/events-list/events-list.component.html
+++ b/src/app/events-list/events-list.component.html
@@ -41,7 +41,7 @@
                 <ng-container matColumnDef="block">
                     <th *matHeaderCellDef mat-header-cell mat-sort-header>Block</th>
                     <td *matCellDef="let element" mat-cell>
-                        <a (click)="openDetailsDialog($event, element.block, '')" class="table-link" href="" rel="nofollow">
+                        <a (click)="detailsDialog.openDetailsDialog($event, element.block, '', eventReader)" class="table-link" href="" rel="nofollow">
                             <div innerHTML="{{ element.block | highlight : searchKey}}"></div>
                         </a>
                     </td>
@@ -50,7 +50,7 @@
                 <ng-container matColumnDef="trxHash">
                     <th *matHeaderCellDef mat-header-cell mat-sort-header>Trx</th>
                     <td *matCellDef="let element" mat-cell>
-                        <a (click)="openDetailsDialog($event, '', element.trxHash)" class="table-link" href="" rel="nofollow">
+                        <a (click)="detailsDialog.openDetailsDialog($event, '', element.trxHash, eventReader)" class="table-link" href="" rel="nofollow">
                             <div *ngIf="!(screenWidth > 375 && screenWidth < 769 || screenWidth > 1300)" innerHTML="{{ element.trxHashShort | highlight : searchKey}}"></div>
                             <div *ngIf="screenWidth > 375 && screenWidth < 769 || screenWidth > 1300" innerHTML="{{ element.trxHash | highlight : searchKey}}"></div>
                         </a>
