Replace base64 with hex encoding for ABI url parameter

--- a/src/app/details/inner.component.scss
+++ b/src/app/details/inner.component.scss
@@ -17,3 +17,7 @@ div, .mat-list-base .mat-list-item, .mat-list-item-content, {
 a {
   color: darkblue;
 }
+
+a:hover {
+  text-decoration: underline;
+}
