--- a/src/app/events-list/events-list.component.css
+++ b/src/app/events-list/events-list.component.css
@@ -143,4 +143,9 @@ img {
 
 .table-link {
     color: darkblue;
+    text-decoration: none;
+}
+
+.table-link :hover {
+    text-decoration: underline;
 }
