--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -31,7 +31,7 @@
 
 
             <mat-form-field style="width: 100%;">
-                <label for="abi"></label><textarea (blur)="onBlurAbi()" (change)="updateABIValue()" (focus)="onFocusAbi()" (keyup.enter)="reloadPage()"
+                <label for="abi"></label><textarea (blur)="onBlurAbi()" (change)="updateABIValue()" (focus)="onFocusAbi()"
                                                    [cdkAutosizeMaxRows]="noOfRowsAbi"  [value]="abi" appJsonFormatter cdkAutosizeMinRows="1" cdkTextareaAutosize
                                                    formControlName="abi" id="abi" matInput placeholder="Abi" spellcheck="false" type="text"></textarea>
             </mat-form-field>
