UI improvements (show form inputs in two columns on larger with)

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -7,3 +7,11 @@ input.mat-input-element {
     font-family: Consolas, Menlo, Monaco, monospace;
     font-weight: lighter;
 }
+
+.basic-container {
+    padding: 5px;
+}
+
+.mat-form-field {
+    width: 100%;
+}
