--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -9,34 +9,37 @@
                 <mat-panel-description></mat-panel-description>
             </mat-expansion-panel-header>
 
-            <mat-form-field style="width: 100%;">
-                <label for="startBlock"></label><input (change)="updateStartValue()" (keyup.enter)="reloadPage()" [value]="startBlock" formControlName="startBlock" id="startBlock"
-                                                       matInput placeholder="Start" type="text">
+
+            <div fxLayout="row" fxLayout.sm="column" fxLayout.xs="column">
+                <mat-form-field>
+                    <label for="startBlock"></label><input (change)="updateStartValue()" (keyup.enter)="reloadPage()" [value]="startBlock" formControlName="startBlock"
+                                                           id="startBlock" matInput placeholder="Start" type="text">
+                </mat-form-field>&nbsp;&nbsp;
+                <mat-form-field>
+                    <label for="endBlock"></label><input (change)="updateEndValue()" (keyup.enter)="reloadPage()" [value]="endBlock" formControlName="endBlock" id="endBlock"
+                                                         matInput placeholder="End" type="text">
+                </mat-form-field>
+            </div>
+
+            <div fxLayout="row" fxLayout.sm="column" fxLayout.xs="column">
+                <mat-form-field>
+                    <label for="provider"></label><input (change)="updateProviderValue()" (keyup.enter)="reloadPage()" [value]="provider" formControlName="provider" id="provider"
+                                                         matInput placeholder="Provider" type="text">
+                </mat-form-field>&nbsp;&nbsp;
+                <mat-form-field>
+                    <label for="contract"></label><input (change)="updateContractValue()" (keyup.enter)="reloadPage()" [value]="contract" formControlName="contract" id="contract"
+                                                         matInput placeholder="Contract" type="text">
+                </mat-form-field>
+            </div>
+
+
+            <mat-form-field>
+                <label for="abi"></label><textarea (blur)="onBlurAbi()" (change)="updateABIValue()" (focus)="onFocusAbi()" [cdkAutosizeMaxRows]="noOfRowsAbi" [value]="abi"
+                                                   appJsonFormatter cdkAutosizeMinRows="1" cdkTextareaAutosize formControlName="abi" id="abi" matInput placeholder="Abi"
+                                                   spellcheck="false" type="text"></textarea>
             </mat-form-field>
 
-            <mat-form-field style="width: 100%;">
-                <label for="endBlock"></label><input (change)="updateEndValue()" (keyup.enter)="reloadPage()" [value]="endBlock" formControlName="endBlock" id="endBlock" matInput
-                                                     placeholder="End" type="text">
-            </mat-form-field>
-
-            <mat-form-field style="width: 100%;">
-                <label for="provider"></label><input (change)="updateProviderValue()" (keyup.enter)="reloadPage()" [value]="provider" formControlName="provider" id="provider"
-                                                     matInput placeholder="Provider" type="text">
-            </mat-form-field>
-
-            <mat-form-field style="width: 100%;">
-                <label for="contract"></label><input (change)="updateContractValue()" (keyup.enter)="reloadPage()" [value]="contract" formControlName="contract" id="contract"
-                                                     matInput placeholder="Contract" type="text">
-            </mat-form-field>
-
-
-            <mat-form-field style="width: 100%;">
-                <label for="abi"></label><textarea (blur)="onBlurAbi()" (change)="updateABIValue()" (focus)="onFocusAbi()"
-                                                   [cdkAutosizeMaxRows]="noOfRowsAbi"  [value]="abi" appJsonFormatter cdkAutosizeMinRows="1" cdkTextareaAutosize
-                                                   formControlName="abi" id="abi" matInput placeholder="Abi" spellcheck="false" type="text"></textarea>
-            </mat-form-field>
-
-            <div style="width: 100%;">
+            <div>
                 <mat-checkbox (click)="updateRefreshValue()" [(ngModel)]="refresh" [color]="'primary'" formControlName="refresh" id="refresh" layout-align="end">Automatic update
                 </mat-checkbox>
             </div>
