--- a/src/app/mat-table-responsive/mat-table-responsive.directive.scss
+++ b/src/app/mat-table-responsive/mat-table-responsive.directive.scss
@@ -1,5 +1,6 @@
 @media (max-width: 768px) {
   .mat-table[matTableResponsive] {
+
     .mat-header-row {
       display: flex;
       flex-wrap: wrap;
@@ -33,12 +34,12 @@
       td.mat-cell:not(.mat-column-actions) {
         display: grid;
         grid-template-columns: 15% 85%;
-        padding: 0.1rem;
+        padding: 0.2rem;
         text-align: left;
         align-content: end;
         word-break: break-word;
         font-family: Consolas, Menlo, Monaco, monospace;
-        font-size: x-small;
+        font-size: small;
 
         & > * {
           grid-column: 2;
