UI improvements (code cleanup)

--- a/src/app/components/events-table/events-table.component.html
+++ b/src/app/components/events-table/events-table.component.html
@@ -20,7 +20,7 @@
             </div>
 
 
-            <table [dataSource]="listData" mat-table matSort matTableResponsive>
+            <table [dataSource]="listData" mat-table matSort appTableResponsive>
 
 
                 <ng-container matColumnDef="image">
