--- a/src/app/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/components/modal-dialog/modal-dialog.component.html
@@ -2,7 +2,7 @@
 
     <h2 mat-dialog-title>Details</h2>
 
-    <inner-component [inputData]="data"></inner-component>
+    <app-inner-component [inputData]="data"></app-inner-component>
 
     <div class="spacer"></div>
 
