--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -44,7 +44,7 @@
             </mat-form-field>
 
             <div>
-                <mat-checkbox (click)="updateRefreshValue()" [(ngModel)]="refresh" [color]="'primary'" formControlName="refresh" id="refresh" layout-align="end">Automatic update
+                <mat-checkbox (click)="updateRefreshValue()" [color]="'primary'" formControlName="refresh" id="refresh" layout-align="end">Automatic update
                 </mat-checkbox>
             </div>
 
