--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,10 +9,10 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
 $dark-primary: mat-palette($mat-blue-grey);
-$dark-accent:  mat-palette($mat-amber, A200, A100, A400);
+$dark-accent: mat-palette($mat-amber, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$dark-warn:    mat-palette($mat-deep-orange);
+$dark-warn: mat-palette($mat-deep-orange);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $cdark-theme: mat-light-theme($dark-primary, $dark-accent, $dark-warn);
@@ -23,7 +23,7 @@ $cdark-theme: mat-light-theme($dark-primary, $dark-accent, $dark-warn);
 @include angular-material-theme($cdark-theme);
 
 
-@import './app/mat-table-responsive/mat-table-responsive.directive';
+@import 'src/app/components/events-table/directives/events-list-responsive.directive';
 
 body {
   padding-left: 0;
@@ -32,4 +32,8 @@ body {
   margin: 0;
 }
 
-@media screen and (max-width: 700px){ html,body {min-width:360px} }
+@media screen and (max-width: 700px) {
+  html, body {
+    min-width: 360px
+  }
+}
