--- a/src/app/components/modal-dialog/modal-dialog-content.component.scss
+++ b/src/app/components/modal-dialog/modal-dialog-content.component.scss
@@ -1,8 +1,8 @@
 div, .mat-list-base .mat-list-item, .mat-list-item-content, {
   white-space: pre-wrap;
-  font-family: monospace;
+  font-weight: lighter;
   line-height: 1.1rem;
-  font-size: medium;
+  font-size: small;
 }
 
 .mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
@@ -15,9 +15,8 @@ div, .mat-list-base .mat-list-item, .mat-list-item-content, {
 }
 
 a {
+  white-space: pre-wrap;
+  font-weight: lighter;
   color: darkblue;
-}
-
-a:hover {
   text-decoration: underline;
 }
